# audiobook

./: .env  .gitignore  app.py  cmd.cmd  pyproject.toml  pytest.ini  requirements.txt  run.cmd
ebooks/: UnravelMe.epub  UnravelMeTest.txt  UnravelMe_one_chapter.txt  UnravelMe_one_sentense.txt  god-1.txt  god-c1.txt  god-c12.epub  god-c12.txt
lib/: conf.py
lib/classes/tts_engines/: coqui.py
lrc/: convert.py
tests/: test_convert_chapters2audio.py  test_convert_chinese2audio.py  test_covert_book.py  test_tts.py  test_tts_eng.py  test_tts_info.py
tools/: gpu_test.py
voices/zho/: wav_convet.cmd
