[project]
name = "ebook2audiobook"
version = "0.0.0"
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
dependencies = [
	"argostranslate",
	"beautifulsoup4",
	"cutlet",
	"deep_translator",
	"demucs",
	"docker",
	"ebooklib",
	"fastapi",
	"fugashi",
	"gradio",
	"hangul-romanize",
	"indic-nlp-library",
	"iso-639",
	"jieba",
	"soynlp",
	"pythainlp",
	"pydub",
	"pyannote-audio",
	"mutagen",
	"nvidia-ml-py",
	"PyOpenGL",
	"pypinyin",
	"ray",
	"regex",
	"translate",
	"tqdm",
	"unidic",
	"pymupdf4llm",
	"sudachipy",
	"sudachidict_core",
	"transformers==4.51.3",
	"coqui-tts>=0.26.2",
	"torchvggish"
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]
"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
