[project]
name = "ebook2audiobook"
version = "0.0.0"
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
dependencies = [
	"argostranslate",
	"beautifulsoup4",
	"cutlet",
	"deep_translator",
	"demucs",
	"docker",
	"ebooklib",
	"fastapi",
	"gradio",
	"hangul-romanize",
	"indic-nlp-library",
	"iso-639",
	"jieba",
	"mecab",
	"mecab-python3",
	"soynlp",
	"pythainlp",
	"pydub",
	"m4b-util",
	"nvidia-ml-py",
	"PyOpenGL",
	"pypinyin",
	"ray",
	"regex",
	"translate",
	"tqdm",
	"unidic",
	"pymupdf4llm",
	"sudachipy",
	"sudachidict_core",
	"torch",
	# "coqui-tts>=0.26.2",
#	"torchvggish",
	"markdown>=3.8.2",
	"num2words>=0.5.14",
	"soundfile>=0.13.1",
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]
"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
